force-app/main/default/objects/Pregnancy__c/Pregnancy__c.object-meta.xml
<CustomObject>
    <label>Pregnancy</label>
    <nameField>
        <label>Pregnancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pregnancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>