force-app/main/default/objects/Pregnancy__c/fields/Pregnancy_Multiplicity__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Multiplicity__c</fullName>
    <label>Pregnancy Multiplicity</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>