force-app/main/default/objects/Pregnancy__c/fields/Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors__c</fullName>
    <label>Risk Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>